changes on view models

--- a/WH.RACEDAY.WEB/Views/Customer/Index.cshtml
+++ b/WH.RACEDAY.WEB/Views/Customer/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "CUSTOMER";
 
-    var customers = (CustomerList)ViewData["customers"];
+    var customers = (CustomerListViewModel)ViewData["customers"];
 }
 
 
