--- a/WH.RACEDAY.WEB/Views/Home/Details.cshtml
+++ b/WH.RACEDAY.WEB/Views/Home/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@using WH.RACEDAY.CORE.VIEWMODELS.RACE;
 @{
     ViewBag.Title = "RACE DETAILS";
-    var details = (RaceDetails)ViewData["raceDetails"];
+    var details = (RaceDetailsViewModel)ViewData["raceDetails"];
 }
 
 <div class="row">
